# weitsicht

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  CONTRIBUTING.md  code_of_conduct.md  pyproject.toml  readme.md
.github/workflows/: badges_loc_test_cov.yml  python-publish.yml  tests.yml
docs/: requirements-rtd.txt
docs/source/: change_log.rst  conf.py  contribution.rst  index.rst
docs/source/_static/: version_switcher.json
docs/source/api/: ImageBatch.rst  alias.rst  exceptions.rst  index.rst  return_types_info.rst
docs/source/documentation/: camera_crs.rst  geo-reference_01.rst  index.rst  monoplotting.rst  ortho_image.rst  pixel_crs.rst  pose_orientation.rst  transformation.rst
docs/source/examples/: index.rst
docs/source/user_guides/: batching_images.rst  cameras_distortion.rst  error_handling.rst  images_guide.rst  images_projection_mapping.rst  index.rst  installation.rst  mappers.rst  metadata.rst  quickstart.rst  results_prj_mapping.rst  rotation.rst  top_tips.rst  troubleshooting.rst  type_guards.rst  use_coordinate_systems.rst
examples/: 00_user_guide_walkthroug.py  01_01_map_footprint_centerpoint.py  01_01_map_footrpint_centerpoint.py  01_02_map_points.py  01_03_mesh_example.py  02_01_project_points.py  03_01_image_batch.py  03_02_image_batch_project.py  04_01_dugong_survey.py  04_02_meta_eor.py  05_01_orthophoto.py
examples/data/: DSC00316.json  dem_01_gda94_mga55_ahd.tif
examples/data/ariel_flight/: dtm_epsg31287plus5778.tif  eor_camera_left.csv  eor_camera_right.csv
examples/data/dugong_survey/: image001.json  image002.json  image003.json  image004.json
scripts/: cloc.sh
src/weitsicht/: __init__.py  cfg.py  exceptions.py  type_guards.py  utils.py
src/weitsicht/camera/: __init__.py  base_perspective.py  camera_dict_selector.py  camera_types.py  opencv_perspective.py
src/weitsicht/geometry/: __init__.py  coo_geojson.py  coplanar_collinear.py  interpolation_bilinear.py  intersection_bilinear.py  (+3 more)
tests/: test_ImageOrtho.py  test_base_class.py  test_cameraBasePerspective.py  test_cameraOpenCVPerspective.py  test_camera_estimator_metadata.py  test_camera_model_selector.py  test_coordinates_old.py  test_coordinates_transformer.py  test_coplanar_collinear.py  test_examples_run.py  test_georef_array.py  test_imagePerspective.py  test_image_batch.py  test_image_from_meta_builder.py  test_image_type_selector.py  test_import_eor_example.py  test_interpolation_bilinear.py  test_intersection_bilinear.py  test_intersection_plane.py  test_line_grid_intersection.py  test_mapper_type_selector.py  test_mappingPlane.py  test_meta_data.py  test_perspective_gsd.py  test_raster.py  test_rotation.py  test_trimesh.py  test_utils.py  test_utm_converter.py  test_wgs84_local_tangent.py
tests/data/: 44_2_dgm.tif  44_2_op_2023_30cm.tif  image_2_exiftool_tags.json  image_3_exiftool_tags.json  image_exiftool_tags.json
(+70 files in other folders)
