[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "weitsicht"
version = "0.0.2"
authors = [
  { name="Martin Wieser"},
]
description = "A package that uses image georeferencing for monoplotting (single-image pixel-to-3D ray/surface intersection) and for projecting 3D coordinates into an image. Supports perspective imagery and orthophotos."
readme = "readme.md"
license = {file = "LICENSE"}

requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS"
]

keywords = ["Photogrammetry", "Mapping", "Georefernced Imagery", "Geographical Data", "Monoplotting"]

dependencies = [
    'numpy>=1.26.0',
    'pyproj>=3.6.1',
    'shapely>=2.0.1',
    'rasterio>=1.3.8',
    'trimesh>=4.6.8',
    'rtree>=1.4.0',
    'tomli>=2.4.0',
    ]

[project.urls]
    "Homepage" = "https://github.com/MartinW-S2M/weitsicht"
    "Bug Tracker" = "https://github.com/MartinW-S2M/weitsicht/issues"


[project.optional-dependencies]
test = [
    'pytest>=8.0.0'
]
coverage = [
    'coverage>=7.5.4'
]

docs = [
    'pydata_sphinx_theme',
    'sphinx-design',
]

develop = [
    "pre-commit",
    "pyright",
    "ruff",
    "pytest>=8.0.0",
    "coverage>=7.5.4",
    "pydata_sphinx_theme",
    "sphinx-design",
]

[tool.coverage.report]
exclude_also = ["@abstractmethod", "@abc.abstractmethod"]

[tool.coverage.run]
omit = ["*/dev_code/*", "*/examples/*"]
source = ["src/weitsicht"]
command_line = "-m pytest"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
pythonpath = [  ".", "src"]
testpaths = ["tests"]
markers = [
    "slow: marks tests that are slow (deselect with '-m \"not slow\"')"
]
filterwarnings = [
    "ignore:Conversion of an array with ndim > 0:DeprecationWarning",
    "ignore:Dataset has no geotransform, gcps, or rpcs. The identity matrix will be returned.",
    "ignore:You will likely lose important projection information when converting to a PROJ string from another format."

]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pyright]
typeCheckingMode = "standard"
reportOptionalMemberAccess = "warning"
pythonVersion = "3.11"
include = ["src", "tests", "examples"]
exclude = [
    "**/__pycache__",
    "docs",
]
